# windecoration-inator

./: Cargo.toml  build.rs  config.rc
src/: main.c  main.rs
