[package]
name = "decoration-inator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.16"
tray-item = "0.8.0"
winapi = { version = "0.3.9", features = ["winuser"] }

[build-dependencies]
windres = "*"